--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav class="flex mt-4">
-        <span class="pl-5">About</span>
-        <span class="pl-5">Store</span>
+        <button class="pl-5">About</button>
+        <button class="pl-5">Store</button>
         
         <div class="flex-grow"></div>
         
-        <span class="pr-5">Vmail</span>
-        <span class="pr-5">Images</span>
+        <button class="pr-5">Vmail</button>
+        <button class="pr-5">Images</button>
         <button class="pr-5 pl-5 pb-1 pt-1 -mt-1 -mb-2 mr-5 text-white bg-blue-400 rounded-sm">Sign In</button>
       </nav>
       <div class="grid place-items-center">
@@ -33,8 +33,8 @@
             <img src="https://cdn1.iconfinder.com/data/icons/modern-universal/32/icon-39-512.png" width="25" height="20">
             </div>
             <div class="flex" style="margin-left: 25px;">
-              <button class="rounded-md bg-gray-200 mt-3 mr-5 pt-2 pb-2 pl-2 pr-2">Voodle Search</button>
-              <button class="rounded-md bg-gray-200 mt-3 mr-5 pt-2 pb-2 pl-2 pr-2">Smarter every click</button>
+              <span class="rounded-md bg-gray-200 mt-3 mr-5 pt-2 pb-2 pl-2 pr-2">Voudle Search</span>
+              <span class="rounded-md bg-gray-200 mt-3 mr-5 pt-2 pb-2 pl-2 pr-2">Smarter every click</span>
             </div>
       </div>
       <footer class="absolute bottom-0 w-full pt-4 pb-4 text-center bg-gray-300">
